Attempt 4 - production bug on iphones whereby media-scroller not scrolling. Remove earlier fix for success message

--- a/c2_main_app/static/c2_main_app/styles/_home-landing.scss
+++ b/c2_main_app/static/c2_main_app/styles/_home-landing.scss
@@ -1,10 +1,3 @@
-#success-msg {
-    position: relative;
-    max-width: var(--large-screen--);
-    margin: 0 auto;
-    overscroll-behavior: none;
-}
-
 #landing-splash {
     background-image: url(images/main_landing_bwimg.jpg);
     height: calc(max(100vh, 600px));
